[project]
name = "open_oceans"
version = "0.0.1"
description = "OpenOceans helps you use bathymetric data from NASA's ICESat-2 Mission."
requires-python = ">=3.9"
authors = [
    { name="Jonathan Markel", email="jonathanmarkel@gmail.com" },
]
license = { file="LICENSE.md" }
readme = "README.md"

keywords = ["icesat-2", "bathymetry", "geospatial", "altimetry", "lidar"]

classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

[build-system]
requires = [
    "pdm-pep517",
    "sliderule==1.4.0",
    "bokeh==2.4.2",
    "pyproj==3.3.0",
    "tqdm",
    "pybase64",
    "pathlib",
    "astropy"
    ]

build-backend = "pdm.pep517.api"
